--- a/.github/workflows/generate-go.yml
+++ b/.github/workflows/generate-go.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Initialize Go module and create directory structure
         run: |
           mkdir -p go/vmapi/vmserver go/vmapi/vmclient
-          cd go
+          cd go/vmapi
           if [ ! -f go.mod ]; then
             go mod init github.com/krelinga/video-manager-api/go/vmapi
           fi
