--- a/.github/workflows/generate-go.yml
+++ b/.github/workflows/generate-go.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Generate Go server
         run: |
           cd go/vmapi/vmserver
-          oapi-codegen -generate std-http-server,spec -o server.gen.go -package vmserver ../../../openapi.yml
+          oapi-codegen -generate std-http-server,strict-server,spec -o server.gen.go -package vmserver ../../../openapi.yml
           echo "Generated server code:"
           wc -l server.gen.go
           head -20 server.gen.go
