--- a/.github/workflows/generate-go.yml
+++ b/.github/workflows/generate-go.yml
@@ -27,46 +27,9 @@ jobs:
         run: |
           go install github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen@latest
 
-      - name: Initialize Go module and create directory structure
+      - name: Generate Go code
         run: |
-          mkdir -p go/vmapi/vmtypes go/vmapi/vmserver go/vmapi/vmclient
-          cd go/vmapi
-          if [ ! -f go.mod ]; then
-            go mod init github.com/krelinga/video-manager-api/go/vmapi
-          fi
-          cd ..
-
-      - name: Generate Go types
-        run: |
-          cd go/vmapi/vmtypes
-          oapi-codegen -config ../../../config/types.yml ../../../types.yml
-          echo "Generated types:"
-          cat types.gen.go
-          cd ../../..
-
-      - name: Generate Go server
-        run: |
-          cd go/vmapi/vmserver
-          oapi-codegen -config ../../../config/server.yml ../../../openapi.yml
-          echo "Generated server code:"
-          wc -l server.gen.go
-          head -20 server.gen.go
-          cd ../../..
-
-      - name: Generate Go client
-        run: |
-          cd go/vmapi/vmclient
-          oapi-codegen -config ../../../config/client.yml ../../../openapi.yml
-          echo "Generated client code:"
-          wc -l client.gen.go
-          head -20 client.gen.go
-          cd ../../..
-
-      - name: Update go.mod
-        run: |
-          cd go/vmapi
-          go mod tidy
-          cd ../..
+          ./scripts/generate-go.sh
 
       - name: Commit generated code
         run: |
