--- a/config/go.yaml
+++ b/config/go.yaml
@@ -1,9 +1,11 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/oapi-codegen/oapi-codegen/HEAD/configuration-schema.json
 package: vmapi
-output: types.gen.go
+output: api.gen.go
 generate:
   models: true
+  client: true
+  std-http-server: true
+  strict-server: true
   embedded-spec: true
 output-options:
-  # NOTE that this is only required for the `Unreferenced` type
   skip-prune: true
