--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,15 +30,18 @@ jobs:
             exit 1
           fi
           echo "Release name validation passed: $RELEASE_NAME"
+          # Create the full tag name for the Go module
+          FULL_TAG_NAME="go/vmapi/$RELEASE_NAME"
+          echo "FULL_TAG_NAME=$FULL_TAG_NAME" >> $GITHUB_ENV
+          echo "VERSION=$RELEASE_NAME" >> $GITHUB_ENV
 
       - name: Check if tag already exists
         run: |
-          RELEASE_NAME="${{ github.event.inputs.release_name }}"
-          if git rev-parse "$RELEASE_NAME" >/dev/null 2>&1; then
-            echo "Error: Tag $RELEASE_NAME already exists"
+          if git rev-parse "$FULL_TAG_NAME" >/dev/null 2>&1; then
+            echo "Error: Tag $FULL_TAG_NAME already exists"
             exit 1
           fi
-          echo "Tag $RELEASE_NAME does not exist, proceeding with creation"
+          echo "Tag $FULL_TAG_NAME does not exist, proceeding with creation"
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -55,36 +58,34 @@ jobs:
 
       - name: Create and push tag
         run: |
-          RELEASE_NAME="${{ github.event.inputs.release_name }}"
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag -a "$RELEASE_NAME" -m "Release $RELEASE_NAME"
-          git push origin "$RELEASE_NAME"
-          echo "Successfully created and pushed tag: $RELEASE_NAME"
+          git tag -a "$FULL_TAG_NAME" -m "Release $VERSION"
+          git push origin "$FULL_TAG_NAME"
+          echo "Successfully created and pushed tag: $FULL_TAG_NAME"
 
       - name: Export tagged version with go list -m
         run: |
-          GOPROXY=proxy.golang.org go list -m "github.com/krelinga/video-manager-api/go/vmapi@${{ github.event.inputs.release_name }}"
-      
+          GOPROXY=proxy.golang.org go list -m "github.com/krelinga/video-manager-api/go/vmapi@$FULL_TAG_NAME"
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.event.inputs.release_name }}
-          name: Release ${{ github.event.inputs.release_name }}
+          tag_name: ${{ env.FULL_TAG_NAME }}
+          name: Release ${{ env.VERSION }}
           generate_release_notes: true
           body: |
             ## Changes
-            See the [commits](https://github.com/${{ github.repository }}/commits/${{ github.event.inputs.release_name }}) for details.
+            See the [commits](https://github.com/${{ github.repository }}/commits/${{ env.FULL_TAG_NAME }}) for details.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Release summary
         run: |
-          RELEASE_NAME="${{ github.event.inputs.release_name }}"
           REPO="${{ github.repository }}"
-          GH_RELEASE_URL="https://github.com/$REPO/releases/tag/$RELEASE_NAME"
+          GH_RELEASE_URL="https://github.com/$REPO/releases/tag/$FULL_TAG_NAME"
 
           echo "## Release Summary" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Release tag **$RELEASE_NAME** has been successfully created." >> $GITHUB_STEP_SUMMARY
+          echo "✅ Release tag **$FULL_TAG_NAME** has been successfully created." >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "- [GitHub Release]($GH_RELEASE_URL)" >> $GITHUB_STEP_SUMMARY
