--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Export tagged version with go list -m
         run: |
-          GOPROXY=proxy.golang.org go list -m "github.com/krelinga/video-manager-api@$FULL_TAG_NAME"
+          GOPROXY=proxy.golang.org go list -m "github.com/krelinga/video-manager-api/go/vmapi@$VERSION"
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
